[gd_scene load_steps=4 format=3 uid="uid://1cw323sugap6"]

[ext_resource type="FontFile" uid="uid://qccqn5puw4gx" path="res://asset/brackeys_platformer_assets/brackeys_platformer_assets/fonts/PixelOperator8.ttf" id="1_oki2a"]
[ext_resource type="Script" path="res://scripts/rooms_text/room_1.gd" id="1_unnbi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f4h8h"]
size = Vector2(128, 118)

[node name="room1" type="Area2D"]
collision_mask = 2
script = ExtResource("1_unnbi")

[node name="room1" type="Label" parent="."]
offset_right = 135.0
offset_bottom = 99.0
theme_override_fonts/font = ExtResource("1_oki2a")
theme_override_font_sizes/font_size = 8
text = "5-6 AM"
autowrap_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(64, 59)
shape = SubResource("RectangleShape2D_f4h8h")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
